Edit Info for the UI

--- a/app/src/main/res/layout/detailed_activity.xml
+++ b/app/src/main/res/layout/detailed_activity.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:text="Bread :"
+                    android:text="Breed :"
                     android:textSize="16sp"
                     android:textStyle="bold"/>
 
@@ -124,7 +124,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="3dp"
-                    android:text="Male :"
+                    android:text="Imperial :"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -150,7 +150,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="3dp"
-                    android:text="Female :"
+                    android:text="Metric :"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -183,7 +183,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="3dp"
-                    android:text="Male :"
+                    android:text="Imperial :"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -209,7 +209,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="3dp"
-                    android:text="Female :"
+                    android:text="Metric :"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
